--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   <title>Memory Game</title>
 </head>
 
-<body>
+<body style="padding-right: 0;">
   <noscript>El sitio web no pudo ser cargado.</noscript>
   <div id="root"></div>
 </body>
