--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="theme-color" content="#ffe277" />
+  <meta name="description" content="Juego de cartas" />
   <!--
     Observe el uso de% PUBLIC_URL% en las etiquetas anteriores.
     Se reemplazará con la URL de la carpeta `public` durante la compilación.
