--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#ffe277" />
+  <meta name="theme-color" content="#000000" />
   <meta name="description" content="Juego de cartas" />
   <!--
     Observe el uso de% PUBLIC_URL% en las etiquetas anteriores.
