--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo.png">
   <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
-  <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#eece17">
   <meta name="description" content="Juego de cartas" />
   <meta name="apple-mobile-web-app-title" content="Memory Game">
   <meta name="application-name" content="Memory Game">
