Corrigiendo error de id al seleccionar la misma carta dos veces seguidas

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <title>Memory Game</title>
 </head>
 
-<body style="padding-right: 0;">
+<body>
   <noscript>El sitio web no pudo ser cargado.</noscript>
   <div id="root"></div>
 </body>
